# symbolic-gravity-sim

./: .gitignore  README.md  agents.py  app.py  entropy_field.py  license.md  main gravity theory.txt  psi_eff.py  pyproject.toml  requirements.txt  run1.json  symbolic_collapse_sim.py
core/: Gravity Explainer  __init__.py  agents.py  entropy_field.py  field_utils.py  metrics.py  psi_eff.py  symbolic_collapse_sim.py
src/symbolic_gravity_sim/: __init__.py  cli.py  symbolic_collapse_sim.py
src/symbolic_gravity_sim/core/: Gravity Explainer  __init__.py  agents.py  eleven_d.py  entropy_field.py  metrics.py
tests/: test_agents.py  test_fields.py
